[gd_scene load_steps=23 format=3 uid="uid://dpnth2dk27xsb"]

[ext_resource type="Texture2D" uid="uid://bt7wtfc30f4dk" path="res://Art/Blastket/Blastket.png" id="1_84v1d"]
[ext_resource type="Script" path="res://Enemies/Blastket/Blastket.gd" id="1_b1qeu"]
[ext_resource type="AudioStream" uid="uid://bs72cht5w1y65" path="res://Sounds/slice1.wav" id="2_ji1nk"]
[ext_resource type="Script" path="res://StateMachine.gd" id="4_w15ma"]
[ext_resource type="Script" path="res://Enemies/Blastket/BlastketIdle.gd" id="5_citd7"]
[ext_resource type="Script" path="res://Enemies/Blastket/BlastketPosition.gd" id="6_5b34w"]
[ext_resource type="Script" path="res://Enemies/Blastket/BlastketRocketLauncher.gd" id="7_xu0hi"]
[ext_resource type="PackedScene" uid="uid://d0ouel0mb6ldj" path="res://Enemies/Blastket/blasket_rocket.tscn" id="8_jw8nf"]

[sub_resource type="Animation" id="Animation_wmlod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_6al6y"]
resource_name = "flameDown"
length = 4.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 3.4, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 13, 14, 13, 1]
}

[sub_resource type="Animation" id="Animation_68doq"]
resource_name = "flameUp"
length = 4.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 3.4, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 15, 16, 15, 4]
}

[sub_resource type="Animation" id="Animation_yqhqp"]
resource_name = "jumpDown"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 18, 1]
}

[sub_resource type="Animation" id="Animation_f18ue"]
resource_name = "jumpUp"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 19, 4]
}

[sub_resource type="Animation" id="Animation_x5c82"]
resource_name = "shootDown"
length = 4.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 3.4, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 6, 7, 8, 7, 9, 7, 10, 7, 11, 7, 6, 1]
}

[sub_resource type="Animation" id="Animation_vqcoh"]
resource_name = "shootUp"
length = 4.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 3.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 12, 4]
}

[sub_resource type="Animation" id="Animation_8j74q"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_4hlph"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usa5d"]
_data = {
"RESET": SubResource("Animation_wmlod"),
"flameDown": SubResource("Animation_6al6y"),
"flameUp": SubResource("Animation_68doq"),
"jumpDown": SubResource("Animation_yqhqp"),
"jumpUp": SubResource("Animation_f18ue"),
"shootDown": SubResource("Animation_x5c82"),
"shootUp": SubResource("Animation_vqcoh"),
"walkDown": SubResource("Animation_8j74q"),
"walkUp": SubResource("Animation_4hlph")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6oeq"]
size = Vector2(20, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esm0a"]
size = Vector2(24, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnkc6"]
size = Vector2(30, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2hqx"]
size = Vector2(71, 49)

[node name="Blastket" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_b1qeu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_84v1d")
hframes = 3
vframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_usa5d")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -1.5)
shape = SubResource("RectangleShape2D_q6oeq")

[node name="hitBox" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_esm0a")

[node name="hurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_pnkc6")

[node name="SoundManager" type="Node2D" parent="."]
visible = false

[node name="hit1" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("2_ji1nk")
volume_db = 24.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SoundManager"]

[node name="Start" type="Area2D" parent="."]
collision_layer = 0

[node name="detectionHitbox" type="CollisionShape2D" parent="Start"]
position = Vector2(0, 239)
shape = SubResource("RectangleShape2D_a2hqx")

[node name="aim" type="Marker2D" parent="."]
position = Vector2(5, 9)

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_w15ma")
initial_state = NodePath("rocketlauncher")

[node name="idle" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_citd7")
enemy = NodePath("../..")

[node name="position" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_5b34w")
enemy = NodePath("../..")

[node name="rocketlauncher" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_xu0hi")
enemy = NodePath("../..")
rocket = ExtResource("8_jw8nf")

[node name="timers" type="Node" parent="."]

[node name="stateChange" type="Timer" parent="timers"]
wait_time = 10.0

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="Start" to="." method="_on_start_body_entered"]
